<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/str1" android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/str2" android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/str3" android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/str4" android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/str5" android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/text6"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/str6" android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
    
</LinearLayout>
